package NYqlMountConfig;
option java_package = "ru.yandex.kikimr.proto";

message TMountPoint {
    required string RootAlias = 1;
    required string MountPoint = 2;
    optional bool Library = 3 [default = false];
}

message TMountConfig {
    repeated TMountPoint MountPoints = 1;
}
